# zed

./: Cargo.toml
crates/gpui/src/: window.rs
crates/livekit_client/src/: remote_video_track_view.rs
extensions/devcontainer/: Cargo.toml  README.md  TESTING.md  extension.toml
extensions/devcontainer/examples/: README.md  nodejs-devcontainer.json  python-devcontainer.json  rust-devcontainer.json
extensions/devcontainer/src/: devcontainer.rs
