[package]
name = "zed_devcontainer_extension"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/devcontainer.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = { path = "../../crates/extension_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
